src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0015.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0015 {
  class T1;
  class T2;
  class C {
    String a;
    String a;
    String b;
    int b;
    T1 c;
    T2 c;
  }
}